--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-semantic-ui-datepickers": "^2.13.1",
+    "react-toast-notification": "^1.1.4",
+    "react-toast-notifications": "^2.4.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.2",
